--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <th>Descripcion</th>
             <th>Precio</th>
             <th>Cantidad</th>
-            <th></th>
+            <th>Acciones</th>
           </tr>
         </thead>
         <tbody></tbody>
@@ -181,7 +181,7 @@
             </div>
             <div class="price">
               <p>$4.53</p>
-              <div class="detail" data-id="3">
+              <div class="detail" data-id="4">
                 <i class="fa-regular fa-eye"></i>
                 <i class="fa-solid fa-cart-plus add"></i>
               </div>
