--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
       <a class="ver" href="#">Ver Más</a>
     </main>
 
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
