--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
               <p>LOGO</p>
             </div>
             <ul>
-              <li><a href="#">Reseña</a></li>
+              <li><a href="#resenha">Reseña</a></li>
               <li><a href="#">Nosotros</a></li>
-              <li><a href="#">Menu</a></li>
+              <li><a href="#lista-producto">Menu</a></li>
             </ul>
           </nav>
         </header>
@@ -192,6 +192,68 @@
       <a class="ver" href="#">Ver Más</a>
     </main>
 
+    <section class="diferencia" id="resenha">
+      <div class="titulo">
+        <h2>¿Por que somos diferentes a lo demás?</h2>
+        <p>No solamente hacemos café, sino que hacemos tu dia mejor!</p>
+      </div>
+      <div class="container-card">
+        <div class="card">
+          <div class="img">
+            <img src="img/coffee-beans 1.png" alt="coffee beans" />
+          </div>
+          <div class="detail">
+            <h3>Grano Café Superiores</h3>
+            <p>Grano de café con sabor grandioso</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="img">
+            <img src="img/badge 1.png" alt="coffee beans" />
+          </div>
+          <div class="detail">
+            <h3>Grano café superiores</h3>
+            <p>Grano de café con sabor grandioso</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="img">
+            <img src="img/coffee-cup 1.png" alt="coffee beans" />
+          </div>
+          <div class="detail">
+            <h3>Grano café superiores</h3>
+            <p>Grano de café con sabor grandioso</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="img">
+            <img src="img/best-price 1.png" alt="coffee beans" />
+          </div>
+          <div class="detail">
+            <h3>Grano café superiores</h3>
+            <p>Grano de café con sabor grandioso</p>
+          </div>
+        </div>
+      </div>
+      <div class="mensaje">
+        <h3>Es una buena idea empezar con una grandiosa tasa de café.</h3>
+      </div>
+    </section>
+
+    <section class="promocion">
+      <div class="left">
+        <h2>Tener la oportunidad de tener una mañana increíble</h2>
+        <p>
+          Te estamos brindando una oportunidad única para experimentar una vida
+          mejor con café.
+        </p>
+        <a href="#">Ordena Ahora</a>
+      </div>
+      <div class="right">
+        <img class="cup" src="img/cup.png" alt="cup">
+        <img class="beans" src="img/coffee_bean.png" alt="">
+      </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="js/script.js"></script>
   </body>
