--- a/index.html
+++ b/index.html
@@ -250,10 +250,82 @@
         <a href="#">Ordena Ahora</a>
       </div>
       <div class="right">
-        <img class="cup" src="img/cup.png" alt="cup">
-        <img class="beans" src="img/coffee_bean.png" alt="">
+        <img class="cup" src="img/cup.png" alt="cup" />
+        <img class="beans" src="img/coffee_bean.png" alt="" />
       </div>
     </section>
+
+    <footer class="footer">
+      <div class="fondo">
+        <div class="presentacion">
+          <div class="logo">
+            <p>LOGO</p>
+          </div>
+          <div class="detail">
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta
+              iusto ad dolorem corporis autem accusantium nobis exercitationem
+              architecto facere. Reprehenderit placeat ullam in amet nulla
+              reiciendis officiis dolore pariatur quam! Doloribus nihil unde
+              nam. Est eos debitis tempore quod, explicabo totam at unde qui
+              minima tenetur! In, autem sed. Reiciendis numquam laudantium
+              consequuntur sunt. Inventore recusandae ea tempore harum ipsam.
+            </p>
+          </div>
+          <div class="redes">
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-x-twitter"></i>
+            <i class="fa-brands fa-linkedin"></i>
+            <i class="fa-brands fa-github"></i>
+          </div>
+        </div>
+        <div class="sobre">
+          <div class="title">
+            <h2>Acerca de</h2>
+          </div>
+          <nav>
+            <ul>
+              <li><a href="#">Menu</a></li>
+              <li><a href="#">Reseña</a></li>
+              <li><a href="#">Blogs</a></li>
+              <li><a href="#">Soporte</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="negocio">
+          <div class="title">
+            <h2>Negocio</h2>
+          </div>
+          <nav>
+            <li><a href="#">Nuestro trabajo</a></li>
+            <li><a href="#">Términos del servicio</a></li>
+            <li><a href="#">Principios</a></li>
+            <li><a href="#">FAQ</a></li>
+          </nav>
+        </div>
+        <div class="contacto">
+          <div class="title">
+            <h2>Contacto</h2>
+          </div>
+          <nav>
+            <li>Ticuantepe,Managua</li>
+            <li>+505 88887777</li>
+            <li>coffecub@gmail.<span>com</span></li>
+            <li>www.coffecub.<span>com</span></li>
+          </nav>
+        </div>
+      </div>
+
+      <div class="cub-left">
+        <img src="img/pngwing 1.png" alt="" />
+      </div>
+
+      <div class="cub-right">
+        <img src="img/pngwing 2.png" alt="" />
+      </div>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="js/script.js"></script>
   </body>
