--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Bienvenido a Coffe Shot: Tu lugar acogedor
+    para disfrutar de café de alta calidad."
 
     <link rel="stylesheet" href="css/style.css" />
 
@@ -98,7 +100,7 @@
       <section class="container_card">
         <div class="card">
           <div class="img">
-            <img src="img/cafe_!.jpg" alt="cafe" />
+            <img src="img/rsz_1cafe_.jpg" alt="cafe" />
             <div class="star">
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
@@ -121,7 +123,7 @@
         </div>
         <div class="card">
           <div class="img">
-            <img src="img/cafe_3.jpg" alt="cafe" />
+            <img src="img/rsz_2cafe_3.jpg" alt="cafe" />
             <div class="star">
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
@@ -144,7 +146,7 @@
         </div>
         <div class="card">
           <div class="img">
-            <img src="img/Cafe_2.jpg" alt="cafe" />
+            <img src="img/rsz_1cafe_2.jpg" alt="cafe" />
             <div class="star">
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
@@ -167,7 +169,7 @@
         </div>
         <div class="card">
           <div class="img">
-            <img src="img/Cafe_4.jpg" alt="cafe" />
+            <img src="img/rsz_1cafe_4.jpg" alt="cafe" />
             <div class="star">
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
@@ -298,10 +300,12 @@
             <h2>Negocio</h2>
           </div>
           <nav>
-            <li><a href="#">Nuestro trabajo</a></li>
-            <li><a href="#">Términos del servicio</a></li>
-            <li><a href="#">Principios</a></li>
-            <li><a href="#">FAQ</a></li>
+            <ul>
+              <li><a href="#">Nuestro trabajo</a></li>
+              <li><a href="#">Términos del servicio</a></li>
+              <li><a href="#">Principios</a></li>
+              <li><a href="#">FAQ</a></li>
+            </ul>
           </nav>
         </div>
         <div class="contacto">
@@ -309,10 +313,12 @@
             <h2>Contacto</h2>
           </div>
           <nav>
-            <li>Ticuantepe,Managua</li>
-            <li>+505 88887777</li>
-            <li>coffecub@gmail.<span>com</span></li>
-            <li>www.coffecub.<span>com</span></li>
+            <ul>
+              <li>Ticuantepe,Managua</li>
+              <li>+505 88887777</li>
+              <li>coffecub@gmail.<span>com</span></li>
+              <li>www.coffecub.<span>com</span></li>
+            </ul>
           </nav>
         </div>
       </div>
