--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Bienvenido a Coffe Shot: Tu lugar acogedor
-    para disfrutar de café de alta calidad."
+    para disfrutar de café de alta calidad."/>
 
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
 
     <link
       rel="stylesheet"
