--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="btn"><a href="#">Saber Más</a></div>
       </div>
       <div class="right">
-        <img src="img/coffee_mini.png" alt="" />
+        <img src="img/rsz_1coffee_mini.png" alt="" />
       </div>
     </section>
 
@@ -253,7 +253,7 @@
       </div>
       <div class="right">
         <img class="cup" src="img/cup.png" alt="cup" />
-        <img class="beans" src="img/coffee_bean.png" alt="" />
+        <img class="beans" src="img/rsz_coffee_bean.png" alt="" />
       </div>
     </section>
 
