--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Bienvenido a Coffe Shot: Tu lugar acogedor
-    para disfrutar de café de alta calidad."/>
+    <meta
+      name="description"
+      content="Bienvenido a Coffe Shot: Tu lugar acogedor
+    para disfrutar de café de alta calidad."
+    />
 
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="preload" href="/css/style.css" as="style" />
 
     <link
       rel="stylesheet"
@@ -85,7 +88,7 @@
         <div class="btn"><a href="#">Saber Más</a></div>
       </div>
       <div class="right">
-        <img src="img/rsz_1coffee_mini.png" alt="" />
+        <img src="img/rsz_1coffee_mini.png" alt="cub-beans" loading="lazy" />
       </div>
     </section>
 
@@ -100,7 +103,7 @@
       <section class="container_card">
         <div class="card">
           <div class="img">
-            <img src="img/rsz_1cafe_.jpg" alt="cafe" />
+            <img src="img/rsz_1cafe_.jpg" alt="cafe" loading="lazy" />
             <div class="star">
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
@@ -123,7 +126,7 @@
         </div>
         <div class="card">
           <div class="img">
-            <img src="img/rsz_2cafe_3.jpg" alt="cafe" />
+            <img src="img/rsz_2cafe_3.jpg" alt="cafe" loading="lazy" />
             <div class="star">
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
@@ -146,7 +149,7 @@
         </div>
         <div class="card">
           <div class="img">
-            <img src="img/rsz_1cafe_2.jpg" alt="cafe" />
+            <img src="img/rsz_1cafe_2.jpg" alt="cafe" loading="lazy" />
             <div class="star">
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
@@ -169,7 +172,7 @@
         </div>
         <div class="card">
           <div class="img">
-            <img src="img/rsz_1cafe_4.jpg" alt="cafe" />
+            <img src="img/rsz_1cafe_4.jpg" alt="cafe" loading="lazy" />
             <div class="star">
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
@@ -202,7 +205,7 @@
       <div class="container-card">
         <div class="card">
           <div class="img">
-            <img src="img/coffee-beans 1.png" alt="coffee beans" />
+            <img src="img/coffee-beans 1.png" alt="coffee beans" loading="lazy"/>
           </div>
           <div class="detail">
             <h3>Grano Café Superiores</h3>
@@ -332,7 +335,7 @@
       </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="js/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11" async></script>
+    <script src="js/script.js" defer></script>
   </body>
 </html>
