--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
       content="Bienvenido a Coffe Shot: Tu lugar acogedor
     para disfrutar de café de alta calidad."
     />
-
-    <link rel="preload" href="/css/style.css" as="style" />
-
+    <link rel="preload" href="/css/style.css" as="style">
+    <link rel="stylesheet" href="/css/style.css">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -205,7 +204,11 @@
       <div class="container-card">
         <div class="card">
           <div class="img">
-            <img src="img/coffee-beans 1.png" alt="coffee beans" loading="lazy"/>
+            <img
+              src="img/coffee-beans 1.png"
+              alt="coffee beans"
+              loading="lazy"
+            />
           </div>
           <div class="detail">
             <h3>Grano Café Superiores</h3>
