--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
       content="Bienvenido a Coffe Shot: Tu lugar acogedor
     para disfrutar de café de alta calidad."
     />
-    <link rel="preload" href="/css/style.css" as="style">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="preload" href="/css/style.css" as="style" />
+    <link rel="stylesheet" href="/css/style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -87,7 +87,11 @@
         <div class="btn"><a href="#">Saber Más</a></div>
       </div>
       <div class="right">
-        <img src="img/rsz_1coffee_mini.png" alt="cub-beans" loading="lazy" />
+        <img
+          src="img/rsz_rsz_1coffee_mini.png"
+          alt="cub-beans"
+          loading="lazy"
+        />
       </div>
     </section>
 
@@ -102,7 +106,7 @@
       <section class="container_card">
         <div class="card">
           <div class="img">
-            <img src="img/rsz_1cafe_.jpg" alt="cafe" loading="lazy" />
+            <img src="img/rsz_rsz_cafe_.jpg" alt="cafe" loading="lazy" />
             <div class="star">
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
@@ -125,7 +129,7 @@
         </div>
         <div class="card">
           <div class="img">
-            <img src="img/rsz_2cafe_3.jpg" alt="cafe" loading="lazy" />
+            <img src="img/rsz_rsz_2cafe_3.jpg" alt="cafe" loading="lazy" />
             <div class="star">
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
@@ -171,7 +175,7 @@
         </div>
         <div class="card">
           <div class="img">
-            <img src="img/rsz_1cafe_4.jpg" alt="cafe" loading="lazy" />
+            <img src="img/rsz_1rsz_1cafe_4.jpg" alt="cafe" loading="lazy" />
             <div class="star">
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
@@ -330,11 +334,11 @@
       </div>
 
       <div class="cub-left">
-        <img src="img/pngwing 1.png" alt="" />
+        <img src="img/pngwing 1.png" alt="cub" sizes="6vw" />
       </div>
 
       <div class="cub-right">
-        <img src="img/pngwing 2.png" alt="" />
+        <img src="img/pngwing 2.png" alt="cub" sizes="6vw" />
       </div>
     </footer>
 
