--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     />
     <link rel="preload" href="/css/style.css" as="style" />
     <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/all.min.css">
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -88,7 +90,7 @@
       </div>
       <div class="right">
         <img
-          src="img/rsz_rsz_1coffee_mini.png"
+          src="img/coffee_mini_optimized.png"
           alt="cub-beans"
           loading="lazy"
         />
