agregando y eliminando elementos

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     />
     <link rel="preload" href="/css/style.css" as="style" />
     <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="css/all.min.css">
 
     <link
       rel="stylesheet"
@@ -90,7 +89,7 @@
       </div>
       <div class="right">
         <img
-          src="img/coffee_mini_optimized.png"
+          src="img/coffee_mini_optimized_optimized.png"
           alt="cub-beans"
           loading="lazy"
         />
@@ -108,7 +107,7 @@
       <section class="container_card">
         <div class="card">
           <div class="img">
-            <img src="img/rsz_rsz_cafe_.jpg" alt="cafe" loading="lazy" />
+            <img src="img/rsz_1cafe__optimized.jpg" alt="cafe" loading="lazy" />
             <div class="star">
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
@@ -131,7 +130,11 @@
         </div>
         <div class="card">
           <div class="img">
-            <img src="img/rsz_rsz_2cafe_3.jpg" alt="cafe" loading="lazy" />
+            <img
+              src="img/rsz_2cafe_3_optimized.jpg"
+              alt="cafe"
+              loading="lazy"
+            />
             <div class="star">
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
@@ -154,7 +157,11 @@
         </div>
         <div class="card">
           <div class="img">
-            <img src="img/rsz_1cafe_2.jpg" alt="cafe" loading="lazy" />
+            <img
+              src="img/rsz_1cafe_2_optimized.jpg"
+              alt="cafe"
+              loading="lazy"
+            />
             <div class="star">
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
@@ -177,7 +184,11 @@
         </div>
         <div class="card">
           <div class="img">
-            <img src="img/rsz_1rsz_1cafe_4.jpg" alt="cafe" loading="lazy" />
+            <img
+              src="img/rsz_1cafe_4_optimized.jpg"
+              alt="cafe"
+              loading="lazy"
+            />
             <div class="star">
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
@@ -211,7 +222,7 @@
         <div class="card">
           <div class="img">
             <img
-              src="img/coffee-beans 1.png"
+              src="img/coffee-beans-1_optimized.png"
               alt="coffee beans"
               loading="lazy"
             />
@@ -223,7 +234,7 @@
         </div>
         <div class="card">
           <div class="img">
-            <img src="img/badge 1.png" alt="coffee beans" />
+            <img src="img/badge-1_optimized.png" alt="coffee beans" />
           </div>
           <div class="detail">
             <h3>Grano café superiores</h3>
@@ -232,7 +243,7 @@
         </div>
         <div class="card">
           <div class="img">
-            <img src="img/coffee-cup 1.png" alt="coffee beans" />
+            <img src="img/coffee-cup-1_optimized.png" alt="coffee beans" />
           </div>
           <div class="detail">
             <h3>Grano café superiores</h3>
@@ -241,7 +252,7 @@
         </div>
         <div class="card">
           <div class="img">
-            <img src="img/best-price 1.png" alt="coffee beans" />
+            <img src="img/best-price-1_optimized.png" alt="coffee beans" />
           </div>
           <div class="detail">
             <h3>Grano café superiores</h3>
@@ -264,8 +275,8 @@
         <a href="#">Ordena Ahora</a>
       </div>
       <div class="right">
-        <img class="cup" src="img/cup.png" alt="cup" />
-        <img class="beans" src="img/rsz_coffee_bean.png" alt="" />
+        <img class="cup" src="img/cup_optimized.png" alt="cup" />
+        <img class="beans" src="img/rsz_coffee_bean_optimized.png" alt="" />
       </div>
     </section>
 
@@ -336,11 +347,11 @@
       </div>
 
       <div class="cub-left">
-        <img src="img/pngwing 1.png" alt="cub" sizes="6vw" />
+        <img src="img/pngwing-1_optimized.png" alt="cub" sizes="6vw" />
       </div>
 
       <div class="cub-right">
-        <img src="img/pngwing 2.png" alt="cub" sizes="6vw" />
+        <img src="img/pngwing-2_optimized.png" alt="cub" sizes="6vw" />
       </div>
     </footer>
 
