--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       </div>
       <div class="right">
         <img
-          src="img/coffee_mini_optimized_optimized.png"
+          src="img/coffee_mini_optimized_optimized.webp"
           alt="cub-beans"
           loading="lazy"
         />
@@ -347,11 +347,11 @@
       </div>
 
       <div class="cub-left">
-        <img src="img/pngwing-1_optimized.png" alt="cub" sizes="6vw" />
+        <img src="img/pngwing-1_optimized.webp" alt="cub" sizes="6vw" />
       </div>
 
       <div class="cub-right">
-        <img src="img/pngwing-2_optimized.png" alt="cub" sizes="6vw" />
+        <img src="img/pngwing-2_optimized.webp" alt="cub" sizes="6vw" />
       </div>
     </footer>
 
