--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       content="Bienvenido a Coffe Shot: Tu lugar acogedor
     para disfrutar de café de alta calidad."
     />
+
     <link rel="preload" href="/css/style.css" as="style" />
     <link rel="stylesheet" href="/css/style.css" />
 
@@ -57,7 +58,6 @@
         </div>
       </div>
     </section>
-
     <div class="carrito">
       <table id="lista-carrito">
         <thead>
@@ -356,6 +356,10 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11" async></script>
+    <script
+      src="https://kit.fontawesome.com/610c201c1f.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="js/script.js" defer></script>
   </body>
 </html>
